finalize lec04 solutions

--- a/data/dm_depress.Rmd
+++ b/data/dm_depress.Rmd
@@ -27,8 +27,10 @@ and ordering applied.
 ```{r}
 depress$MARITAL <- factor(depress$MARITAL, 
                           labels = c("Never Married", "Married", "Divorced", "Separated", "Widowed"))
-depress$EDUCAT2 <- factor(depress$EDUCAT, 
+depress$EDUCAT <- factor(depress$EDUCAT, 
                           labels = c("<HS", "Some HS", "HS Grad", "Some college", "BS", "MS", "PhD"))
+                          
+                          
 ```
 
 
