--- a/notes/lec07_DiscriminantAnalysis.Rmd
+++ b/notes/lec07_DiscriminantAnalysis.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Lec 06: Dimension Reduction using Principal Components'
+title: 'Lec 07: Discriminant Analysis'
 author: "MATH 456 - Spring 2016"
 output:
   html_document:
@@ -22,18 +22,17 @@ source("C:/Github/MATH456/stylesheets/custom.R")
 Navbar: [[Home]](../index.html) [[Schedule]](../Schedule.html) [[Data]](../data/Datasets.html) [[Week 9 Overview]](../wk09.html) [[HW Info]](../HW_Info.html)  [[Google Group]](https://groups.google.com/forum/#!forum/csuc_stat)
 
 # Assigned Reading & additional references
-**Assigned Reading**
 
-* Afifi Chapter 14 (not quite in linear order. See section details below)
-* A tutorial on Principal Component Analysis http://arxiv.org/pdf/1404.1100.pdf 
-* PCA A How-To Manual for R by Emily Mankin (builds off the above paper) http://psych.colorado.edu/wiki/lib/exe/fetch.php?media=labs:learnr:emily_-_principal_components_analysis_in_r:pca_how_to.pdf
+* Afifi Chapter 11
 
 **Additional references**
 
-* Quick-R http://www.statmethods.net/advstats/factor.html 
-* Computing and visualizing PCA in R via R Bloggers http://www.r-bloggers.com/computing-and-visualizing-pca-in-r/
-* Little book of R for Multivariate Analysis http://little-book-of-r-for-multivariate-analysis.readthedocs.org/en/latest/src/multivariateanalysis.html#principal-component-analysis
-* https://www.youtube.com/watch?v=Heh7Nv4qimU
+* http://www.statmethods.net/advstats/discriminant.html
+* http://rstudio-pubs-static.s3.amazonaws.com/35817_2552e05f1d4e4db8ba87b334101a43da.html
+* https://www.youtube.com/watch?v=s8pvp2Ctxfc
+* http://www.r-bloggers.com/computing-and-visualizing-lda-in-r/
+
+
 
 # Introduction (Afifi 14.1, 14.2)
 
@@ -43,7 +42,7 @@ Navbar: [[Home]](../index.html) [[Schedule]](../Schedule.html) [[Data]](../data/
 * Reduce dimensionality
 * Avoid multicollinearity problems in regression
 
-It's**"Principal"** Components (adjective), not **"Principle"** Components (noun)
+It's **"Principal"** Components (adjective), not **"Principle"** Components (noun)
 
 From [Grammerist](http://grammarist.com/spelling/principle-principal/): 
 
