--- a/wk10.Rmd
+++ b/wk10.Rmd
@@ -11,20 +11,19 @@ source("C:/Github/MATH456/stylesheets/custom.R")
 
 ## Announcements
 
-
 ### Notes and Materials
 * Lec 07: Inference on Categorical Data [[PDF]](notes/lec07_CategoricalDataAnalysis.pdf)[[HTML]](notes/lec07_CategoricalDataAnalysis.html)
+
+##### On Your Own - Review of tests for one and two sample proportions (Before Monday)
 * OpenIntro Statistics [Free PDF Textbook](https://www.openintro.org/stat/textbook.php) Chapter 6 & 7
 * Open Intro Lab on categorical data [[HTML]](notes/OI_Inf_for_categorical_data/html)
 
-
 ### Monday 3/21/16
-* Inference on Categorical data via [Open Intro Lab](OI_Inf_for_categorical_data/html) 
+* Review notes on one and two sample proportions. 
+* <span style="color:red">If there are no questions or discussion then we will start with contingency tables.</span>
 
 ### Wednesday 3/23/16
-* Contingency tables and Odds Ratios 
-* Chi-squared test of association
-* Chi-squared test of independence
+* Contingency tables and measures of association
 
 ### Friday 3/25/16
 * M&M Experiment
