--- a/wk10.Rmd
+++ b/wk10.Rmd
@@ -16,7 +16,8 @@ source("C:/Github/MATH456/stylesheets/custom.R")
 
 ##### On Your Own - Review of tests for one and two sample proportions (Before Monday)
 * OpenIntro Statistics [Free PDF Textbook](https://www.openintro.org/stat/textbook.php) Chapter 6 & 7
-* Open Intro Lab on categorical data [[HTML]](notes/OI_Inf_for_categorical_data/html)
+* Open Intro Lab on categorical data [[HTML]](notes/OI_Inf_for_categorical_data/html) (Uses the `openintro` package)
+
 
 ### Monday 3/21/16
 * Review notes on one and two sample proportions. 
